# CineGraph

./: .env.example  .gitignore  README.md  apphosting.yaml  docker-compose.yml  firebase.json  render.yaml
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial.py  002_movie_embeddings_fk.py  003_embedding_dim_768.py
backend/app/: main.py
backend/app/ai/: agent.py  rate_limiter.py
backend/app/ai/providers/: __init__.py  base.py  factory.py  gemini_provider.py  local_provider.py  openai_provider.py
backend/app/api/routes/: admin.py  auth.py  eval_routes.py  history.py  import_routes.py  lists.py  movies.py  profile.py  recommendations.py  reviews.py  watchlist.py
backend/app/core/: config.py  database.py  deps.py  security.py
backend/app/data/: demo_movies.py
backend/app/ingestion/: letterboxd_parser.py  tmdb_matcher.py
backend/app/models/: __init__.py  ai.py  import_job.py  movie.py  taste.py  user.py  user_content.py  user_data.py
backend/app/retrieval/: retrieval_service.py
backend/app/schemas/: __init__.py  auth.py  import_job.py  movie.py  recommendation.py  taste.py  user_data.py
backend/app/services/: demo_data_service.py  embedding_service.py  evaluation_service.py  history_service.py  import_service.py  list_generator_service.py  movie_service.py  observability_service.py  recommendation_service.py  taste_profile_service.py  tmdb_service.py
backend/app/utils/: movie_parse.py
deploy/: cloudrun-service.yaml
docs/: FIREBASE_DEPLOYMENT.md
frontend/: Dockerfile  (+6 more)
(+49 files in other folders)
