[project]
name = "cinegraph-backend"
version = "0.1.0"
description = "CineGraph API"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "python-multipart>=0.0.17",
    "httpx>=0.28.0",
    "firebase-admin>=6.6.0",
    "google-genai>=1.0.0",
    "openai>=1.57.0",
    "pgvector>=0.3.6",
    "python-jose[cryptography]>=3.3.0",
    "cryptography==42.0.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
